// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-52"
>
  <div
    className="MuiTypography-root-92 MuiTypography-title-98 MuiTypography-gutterBottom-109"
  >
    $19.99
  </div>
  <p
    className="MuiTypography-root-92 MuiTypography-body1-101"
  >
    Vendor
  </p>
  <p
    className="MuiTypography-root-92 MuiTypography-body1-101"
  >
    Description
  </p>
</div>
`;

exports[`snapshot with description only 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-52"
>
  <p
    className="MuiTypography-root-92 MuiTypography-body1-101"
  >
    Description
  </p>
</div>
`;

exports[`snapshot with no props 1`] = `null`;

exports[`snapshot with price and description 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-52"
>
  <div
    className="MuiTypography-root-92 MuiTypography-title-98 MuiTypography-gutterBottom-109"
  >
    $19.99
  </div>
  <p
    className="MuiTypography-root-92 MuiTypography-body1-101"
  >
    Description
  </p>
</div>
`;

exports[`snapshot with price only 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-52"
>
  <div
    className="MuiTypography-root-92 MuiTypography-title-98 MuiTypography-gutterBottom-109"
  >
    $19.99
  </div>
</div>
`;

exports[`snapshot with vendor only 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-sm-12-52"
>
  <p
    className="MuiTypography-root-92 MuiTypography-body1-101"
  >
    Vendor
  </p>
</div>
`;
